open and close issues into work items

--- a/src/IssuesToWorkItems/appsettings.json
+++ b/src/IssuesToWorkItems/appsettings.json
@@ -4,5 +4,15 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "GitHub_Secret": "",
+    "GitHub_Token": "",
+    "GitHub_AppName": "",
+    "ADO_Pat": "",
+    "ADO_Org": "",
+    "ADO_Project": "",
+    "ADO_DefaultWIT": "",
+    "ADO_CloseState": ""
+  }
 }
