Customized closed state in app settings

--- a/src/IssuesToWorkItems/appsettings.json
+++ b/src/IssuesToWorkItems/appsettings.json
@@ -13,6 +13,7 @@
     "ADO_Org": "",
     "ADO_Project": "",
     "ADO_DefaultWIT": "",
-    "ADO_CloseState": ""
+    "ADO_CloseState": "",
+    "ADO_NewState": ""
   }
 }
