Added ability to put new work items into area paths and iteration paths

--- a/src/IssuesToWorkItems/appsettings.json
+++ b/src/IssuesToWorkItems/appsettings.json
@@ -14,6 +14,8 @@
     "ADO_Project": "",
     "ADO_DefaultWIT": "",
     "ADO_CloseState": "",
-    "ADO_NewState": ""
+    "ADO_NewState": "",
+    "ADO_AreaPath": "",
+    "ADO_IterationPath": ""
   }
 }
