--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,7 +15,7 @@ jobs:
       name: Checkout Code
      
     - name: Setup MSBuild Path
-      uses: danhellem/Setup-MSBuild@v1
+      uses: warrenbuckley/Setup-MSBuild@v1
        
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.2
