Area path to app settings and initial create Fixes #13

--- a/src/IssuesToWorkItems/appsettings.json
+++ b/src/IssuesToWorkItems/appsettings.json
@@ -6,14 +6,13 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "GitHub_Secret": "",
-    "GitHub_Token": "",
-    "GitHub_AppName": "",
+    "GitHub_Secret": "",    
     "ADO_Pat": "",
     "ADO_Org": "",
     "ADO_Project": "",
     "ADO_DefaultWIT": "",
     "ADO_CloseState": "",
-    "ADO_NewState": ""
+    "ADO_NewState": "",
+    "ADO_AreaPath":  ""
   }
 }
